--- a/materiales.tex
+++ b/materiales.tex
@@ -4,76 +4,43 @@
 \par\refstepcounter{section}
 \subsection{Equipos}
 \par
-Los equipos computacionales utilizados para esta investigación consistieron en cuatro 
-servidores Dell R620, con 16 núcleos y 64 GB de RAM cada uno y un Apple Mac Pro con 
-12 núcleos y 22 GB de RAM, pertenecientes al laboratorio. 
-Además fue utilizado un laptop personal HP 8740w con 4 núcleos y 20 GB de RAM. 
-Se utilizó el sistema operativo CentOS 6.7 en los servidores Dell y Ubuntu 16.04 
-tanto en el Apple Mac Pro como en el laptop 
-personal.
+Los equipos computacionales utilizados para esta investigación consistieron en cuatro servidores Dell R620, con 16 núcleos y 64 GB de RAM cada uno y un Apple Mac Pro con 12 núcleos y 22 GB de RAM, pertenecientes al laboratorio. 
+Además, fue utilizado un laptop personal HP 8740w con 4 núcleos y 20 GB de RAM. 
+Se utilizó el sistema operativo CentOS 6.7 en los servidores Dell y Ubuntu 16.04 tanto en el Apple Mac Pro como en el laptop personal.
 \subsection{Software}
 \par
-El software utilizado en esta investigación consiste de programas y scripts para manipulación y 
-cálculo de datos escritos en los lenguajes Python 3 y C++, y de programas y librerías de libre 
-acceso para tareas de visualización de datos y generación de gráficos como Scikit 
-(\cite{Pedregosa2012}) y para visualización de estructuras 3D, como PyMOL (\cite{PyMOL}).
+El software utilizado en esta investigación consiste de programas y scripts para manipulación y cálculo de datos escritos en los lenguajes Python 3 y C++, y de programas y librerías de libre acceso para tareas de visualización de datos y generación de gráficos como Scikit (\cite{Pedregosa2012}) y para visualización de estructuras 3D, como PyMOL (\cite{PyMOL}).
 
 \subsection{Sets de estructuras cristalográficas}
 
 \subsubsection{Sets utilizados para derivación de potenciales y experimentos en proteínas}
 \par
-El set de datos utilizado para la derivación de todos los potenciales para proteína fue obtenido a 
-partir de un conjunto inicial de 518 estructuras resueltas por medio de cristalografía de rayos X, 
-las cuales no presentaban duplicados, errores o átomos faltantes, poseian más de 100 residuos por 
-estructura, y presentaban entre si una similitud de secuencia menor al 25\% (\cite{Ferrada2009}). 
-Este conjunto inicial fue a su vez filtrado para remover todas las proteínas con más de una 
-cadena, dejando 267 estructuras monoméricas, a fin de simplificar la derivación de los potenciales.
+El set de datos utilizado para la derivación de todos los potenciales para proteína fue obtenido a partir de un conjunto inicial de 518 estructuras resueltas por medio de cristalografía de rayos X, las cuales no presentaban duplicados, errores o átomos faltantes, poseian más de 100 residuos por estructura, y presentaban entre si una similitud de secuencia menor al 25\% (\cite{Ferrada2009}). 
+Este conjunto inicial fue a su vez filtrado para remover todas las proteínas con más de una cadena, dejando 267 estructuras monoméricas, a fin de simplificar la derivación de los potenciales.
 \par
-El primer benchmark utilizó el mismo conjunto de prueba utilizado en \cite{Ferrada2007}, que 
-consiste en un set de 152 modelos y 80 estructuras nativas monoméricas. 
-Todos los modelos tenían más de 100 aminoácidos y RMSDs menores a 3.0 \si{\angstrom} con más 
-de 90\% de \Ca\ equivalentes respecto a la estructura nativa de la cual fue derivado. 
-Este conjunto fue utilizado para observar la capacidad de los potenciales en clasificar las 
-estructuras en modelos o nativas correctamente.
+El primer benchmark utilizó el mismo conjunto de prueba utilizado en \cite{Ferrada2007}, que consiste en un set de 152 modelos y 80 estructuras nativas monoméricas. 
+Todos los modelos tenían más de 100 aminoácidos y RMSDs menores a 3.0 \si{\angstrom} con más de 90\% de \Ca\ equivalentes respecto a la estructura nativa de la cual fue derivado. 
+Este conjunto fue utilizado para observar la capacidad de los potenciales en clasificar las estructuras en modelos o nativas correctamente.
 \par
-Para el segundo benchmark en proteínas, reconocimiento de errores en proteínas, se utilizó el 
-conjunto de pruebas usado en \cite{Ferrada2009}.
-Este consistía de dos sets, uno de 55 modelos, y otro con 57, ambos con estructuras de más 
-de 100 aminoácidos de largo. 
-El primer set de 55 modelos fue nombrado ``Clase A'', con más de 95\% de \Ca\ 
-equivalentes y RMSDs menor a 1.1 \si{\angstrom} respecto a sus estructuras nativas. 
+Para el segundo benchmark en proteínas, reconocimiento de errores en proteínas, se utilizó el conjunto de pruebas usado en \cite{Ferrada2009}.
+Este consistía de dos sets, uno de 55 modelos, y otro con 57, ambos con estructuras de más de 100 aminoácidos de largo. 
+El primer set de 55 modelos fue nombrado ``Clase A'', con más de 95\% de \Ca\ equivalentes y RMSDs menor a 1.1 \si{\angstrom} respecto a sus estructuras nativas. 
 En total poseía 10295 residuos con 201 de ellos considerados como erróneamente modelados. 
-El segundo set fue identificado por ``Clase B'', con más de 90\% de \Ca\ 
-equivalentes y RMSDs menores a 1.5 \si{\angstrom}.
+El segundo set fue identificado por ``Clase B'', con más de 90\% de \Ca\ equivalentes y RMSDs menores a 1.5 \si{\angstrom}.
 Este contenía un total de 10714 residuos, con 1257 de estos considerados erróneos. 
-Para ambos sets, un residuo modelado es considerado erróneo si este posee un RMSD respecto 
-a su estructura nativa mayor a 1.8 \si{\angstrom} para los \Ca\ y mayor a 
-3.5 \si{\angstrom} para átomos de la cadena lateral.
+Para ambos sets, un residuo modelado es considerado erróneo si este posee un RMSD respecto a su estructura nativa mayor a 1.8 \si{\angstrom} para los \Ca\ y mayor a 3.5 \si{\angstrom} para átomos de la cadena lateral.
 \subsubsection{Sets utilizados para derivación de potenciales y experimentos en ARN}
 \par
-Las estructuras cristalográficas utilizadas para derivación de los potenciales para ARN fueron las 
-mismas utilizadas en \cite{Capriotti2011}. 
-Estas consisten en 85 monómeros de RNA, que fueron obtenidos al filtrar todas las estructuras de 
-la PDB (Abril 2009) y excluir las estructuras con menos de 20 nucleótidos, resueltas a 
-resoluciones mayores que 3.5 \si{\angstrom}, y secuencias redundantes con una identidad mayor al 
-95\%.
+Las estructuras cristalográficas utilizadas para derivación de los potenciales para ARN fueron las mismas utilizadas en \cite{Capriotti2011}, extraídas desde el material suplemental publicado.
+Estas consisten en 85 monómeros de RNA, que fueron obtenidos al filtrar todas las estructuras de la PDB (Abril 2009) y excluir las estructuras con menos de 20 nucleótidos, resueltas a resoluciones mayores que 3.5 \si{\angstrom}, y secuencias redundantes con una identidad mayor al 95\%.
 \par
-Para el primer benchmark en ARN, correlación entre valores de energía dados por los potenciales y 
-medidas de desviación estructural, se utilizó un set de señuelos también usado y descrito en 
-\cite{Capriotti2011}.
+Para el primer benchmark en ARN, correlación entre valores de energía dados por los potenciales y medidas de desviación estructural, se utilizó un set de señuelos también usado y descrito en \cite{Capriotti2011}.
 Estos modelos fueron generados a partir de las 85 estructuras nativas del set de derivación. 
-Para cada una de las estructuras nativas, se generaron 500 modelos, los cuáles a medida eran 
-generados tenían sus restricciones en ángulos dihedrales y de distancia entre ciertos átomos 
-aleatoriamente removidas, con la probabilidad de que ocurra la remoción aumentando 
-progresivamente, generando así modelos con una desviación respecto a la estructura nativa cada 
-vez más alta.
+Para cada una de las estructuras nativas, se generaron 500 modelos, los cuáles a medida eran generados tenían sus restricciones en ángulos dihedrales y de distancia entre ciertos átomos aleatoriamente removidas, con la probabilidad de que ocurra la remoción aumentando progresivamente, generando así modelos con una desviación respecto a la estructura nativa cada vez más alta.
 \par
 El segundo benchmark utilizó el set de datos creado por \cite{Das2010}. 
-Este consiste en 407 modelos de estructuras representando 32 motivos distintos de RNA con 
-pares de bases no canónicos, elegidos usando el campo de fuerza FARFAR (\cite{Das2010}). 
-Estos fueron utilizados para evaluar la capacidad de los potenciales de encontrar los modelos 
-con menor RMSD respecto a su estructura nativa.
+Este consiste en 407 modelos de estructuras representando 32 motivos distintos de RNA con pares de bases no canónicos, elegidos usando el campo de fuerza FARFAR (\cite{Das2010}). 
+Estos fueron utilizados para evaluar la capacidad de los potenciales de encontrar los modelos con menor RMSD respecto a su estructura nativa.
 \subsubsection{Sets utilizados para derivación de potenciales y experimentos en ADN}
 \par
-El set de estructuras cristalográficas utilizado para la derivación de los potenciales en ADN
-consiste de 
+El set de estructuras cristalográficas utilizado para la derivación de los potenciales en ADN consiste de 
