--- a/template.tex
+++ b/template.tex
@@ -31,6 +31,9 @@
 \renewbibmacro{in:}{}
 \addbibresource{tesis.bib}
 \addbibresource{pymol.bib}
+\addbibresource{thomsonapplet.bib}
+\addbibresource{ilibarra.bib}
+\addbibresource{parallel.bib}
 
 \usepackage{float}
 \usepackage{subcaption}
@@ -38,14 +41,15 @@
 \usepackage{graphicx}
 \usepackage{fancyhdr}
 \usepackage{setspace}
+\usepackage{color}
 %pseudo code style
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
 \makeatletter
 \def\BState{\State\hskip-\ALG@thistlm}
 \makeatother
+\renewcommand{\algorithmiccomment}[1]{\hfill\textit{\color{blue}{$\#$#1}}}
 \floatname{algorithm}{Algoritmo}
-
 %pseudo code style end
 
 \doublespacing
@@ -91,7 +95,9 @@
 %unbreakable words
 \hyphenation{SASA}
 \hyphenation{BSASA}
-
+\hyphenation{AUC}
+\hyphenation{ROC}
+\hyphenation{PDB}
 %greek letters
 \newcommand{\Galpha}{\text{\textalpha}}
 \newcommand{\Gbeta}{\text{\textbeta}}
@@ -117,6 +123,9 @@
 \newcommand{\Ceta}{C\textsubscript{\text{\texteta}}}
 \newcommand{\Cetai}{C\textsubscript{\text{\texteta}1}}
 \newcommand{\Cetaii}{C\textsubscript{\text{\texteta}2}}
+
+%separador de las figuras
+\captionsetup[figure]{labelformat=simple, labelsep = period}
 
 \pagestyle{thesis}
 \begin{document}
