--- a/resultados.tex
+++ b/resultados.tex
@@ -232,7 +232,7 @@ Las comparaciones entre los otros pares de potenciales no tuvieron diferencias s
     \caption{}
   \end{subfigure}
  
-\caption[Comparación de las distribuciones de dRMSD entre los modelos con menor RMSD y los modelos con menor energía calculado por cada potencial]{Comparación de las distribuciones de dRMSD entre los modelos con menor RMSD y los modelos con menor energía calculada por cada potencial. En la figura (a) tenemos los resultados calculados con los modelos con las restricciones activadas y en (b) con las restricciones activadas. La línea roja indica la mediana, el cuadrado rojo el promedio y la cintura el intervalo de confianza de la mediana. El N de cada boxplot es de 32.}
+\caption[Comparación de las distribuciones de dRMSD entre los modelos con menor RMSD y los modelos con menor energía calculado por cada potencial]{Comparación de las distribuciones de dRMSD entre los modelos con menor RMSD y los modelos con menor energía calculada por cada potencial. En la figura (a) tenemos los resultados calculados con los modelos con las restricciones activadas y en (b) con las restricciones desactivadas. La línea roja indica la mediana, el cuadrado rojo el promedio y la cintura el intervalo de confianza de la mediana. El N de cada boxplot es de 32.}
 \label{fig:dna1}
 \end{figure}
 
